@@ -15,7 +15,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j
@@ -33,12 +32,12 @@ public class PecDeliveryWorkflowLegalFactsGenerator {
         this.notificationUtils = notificationUtils;
     }
 
-    public String generatePecDeliveryWorkflowLegalFact(NotificationInt notification, Integer recIndex, EndWorkflowStatus status, Instant completionWorkflowDate) {
+    public String generateAndSendCreationRequestForPecDeliveryWorkflowLegalFact(NotificationInt notification, Integer recIndex, EndWorkflowStatus status, Instant completionWorkflowDate) {
         Set<TimelineElementInternal> timeline = timelineService.getTimeline(notification.getIun(), true);
 
         List<TimelineElementInternal> timelineByTimestampSorted = timeline.stream()
                 .sorted(Comparator.comparing(TimelineElementInternal::getTimestamp))
-                .collect(Collectors.toList());
+                .toList();
 
         List<SendDigitalFeedbackDetailsInt> listFeedbackFromExtChannel = new ArrayList<>();
 
@@ -51,15 +50,12 @@ public class PecDeliveryWorkflowLegalFactsGenerator {
         }
 
         NotificationRecipientInt recipient = notificationUtils.getRecipientFromIndex(notification,recIndex);
-        return saveLegalFactsService.savePecDeliveryWorkflowLegalFact(listFeedbackFromExtChannel, notification, recipient, status, completionWorkflowDate);
+        return saveLegalFactsService.sendCreationRequestForPecDeliveryWorkflowLegalFact(listFeedbackFromExtChannel, notification, recipient, status, completionWorkflowDate);
     }
 
     private Optional<RecipientRelatedTimelineElementDetails> getSpecificDetailRecipient(TimelineElementInternal element, int recIndex){
-        if (element.getDetails() instanceof RecipientRelatedTimelineElementDetails) {
-            RecipientRelatedTimelineElementDetails details = (RecipientRelatedTimelineElementDetails) element.getDetails();
-            if( recIndex == details.getRecIndex()){
-                return Optional.of(details);
-            }
+        if (element.getDetails() instanceof RecipientRelatedTimelineElementDetails details && recIndex == details.getRecIndex()) {
+            return Optional.of(details);
         }
         return Optional.empty();
     }
