@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 class RequestRefusedDetailsTest {
 
@@ -13,42 +13,38 @@ class RequestRefusedDetailsTest {
     @BeforeEach
     void setUp() {
         details = new RequestRefusedDetails();
-        details.setErrors(Collections.singletonList("one"));
+        details.setRefusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()));
     }
 
     @Test
     void errors() {
         RequestRefusedDetails tmp = RequestRefusedDetails.builder()
-                .errors(Collections.singletonList("one"))
+                .refusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()))
                 .build();
-        Assertions.assertEquals(tmp, details.errors(Collections.singletonList("one")));
+        Assertions.assertEquals(tmp, details.refusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build())
+        ));
     }
 
     @Test
     void addErrorsItem() {
         RequestRefusedDetails tmp = new RequestRefusedDetails();
-        tmp.addErrorsItem("one");
+        tmp.addRefusalReasonsItem(
+                NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()
+        );
         Assertions.assertEquals(details, tmp);
     }
 
     @Test
     void getErrors() {
-        Assertions.assertEquals(Collections.singletonList("one"), details.getErrors());
+        Assertions.assertEquals(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()), details.getRefusalReasons());
     }
 
     @Test
     void testEquals() {
         RequestRefusedDetails tmp = RequestRefusedDetails.builder()
-                .errors(Collections.singletonList("one"))
+                .refusalReasons(List.of(NotificationRefusedError.builder().errorCode("FILE_NOTFOUND").detail("Allegati non trovati").build()))
                 .build();
         Assertions.assertEquals(Boolean.TRUE, tmp.equals(details));
     }
-
-    @Test
-    void testToString() {
-        String tmp = "class RequestRefusedDetails {\n" +
-                "    errors: [one]\n" +
-                "}";
-        Assertions.assertEquals(tmp, details.toString());
-    }
+    
 }
